# my_agent

./: pyproject.toml
src/my_agent/: global_config.py  script.py
