[project]
name = "my-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MUHAMMAD ABDULLAH ABID", email = "muabdullahabid@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.0.14",
    "streamlit>=1.45.0",
]

[project.scripts]
my-agent = "my_agent:main"
run_global = "my_agent.global_config:run_global"
stream_lit_app = "my_agent.script:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
